tests/baselines/reference/setterWithReturn.errors.txt
setterWithReturn.ts(4,13): error TS2408: Setters cannot return a value.
setterWithReturn.ts(7,13): error TS2408: Setters cannot return a value.


==== setterWithReturn.ts (2 errors) ====
    class C234 {
        public set p1(arg1) {
            if (true) {
                return arg1;
                ~~~~~~
!!! error TS2408: Setters cannot return a value.
            }
            else {
                return 0;
                ~~~~~~
!!! error TS2408: Setters cannot return a value.
            }
       }
    }